<resources>
  <string name="app_name">ShopCircuit</string>
  <!--Bryan-->
  <string name="shopping_list">Shopping List</string>
  <string name="add_item">Add Item</string>
  <string name="clear">Clear</string>
  <string name="delete">Delete</string>
  <string name="item">Item</string>
  <string name="category">Category</string>
  <string name="map">Store Map</string>
  <string name="entrance">Entrance</string>
  <string name="exit">Exit</string>
  <string name="shelf">Shelf</string>
  <string name="shopCircuit">shop-circuit</string>
  <string name="findPath">Find optimal path</string>
  <string name="x1">x1</string>
  <string name="y1">y1</string>
  <string name="xsize">xsize</string>
  <string name="ysize">ysize</string>
  <string name="xy">x,y</string>
  <string name="xy2">xsize,ysize</string>
  <string name="lCategory">category</string>

</resources>
