<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TextView
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:text="@string/shopping_list"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.1"
      android:text="@string/item"
      />
    <AutoCompleteTextView
      android:id="@+id/autoCompleteItem"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.4">
      <requestFocus/>
    </AutoCompleteTextView>
    <TextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.2"
      android:text="@string/category"
      />
    <AutoCompleteTextView
      android:id="@+id/autoCompleteCategory"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.4">
    </AutoCompleteTextView>
  </LinearLayout>

    <ListView
      android:id="@android:id/list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:drawSelectorOnTop="true"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
      android:id="@+id/clearButton"
      android:layout_width="0dp"
      android:layout_weight="0.333"
      android:layout_height="wrap_content"
      android:text="@string/clear"
      android:onClick="clear"
      />

    <Button
      android:id="@+id/deleteButton"
      android:layout_width="0dp"
      android:layout_weight="0.333"
      android:layout_height="wrap_content"
      android:text="@string/delete"
      android:onClick="delete"
      />
    <Button
      android:id="@+id/addItemButton"
      android:layout_width="0dp"
      android:layout_weight="0.333"
      android:layout_height="wrap_content"
      android:text="@string/add_item"
      android:onClick="addItems"
      />


  </LinearLayout>


</LinearLayout>