<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="match_parent"
  android:layout_height="fill_parent">
<!--<View-->
<!--  android:layout_width="wrap_content"-->
<!--  android:layout_height="0dp"-->
<!--  android:layout_weight="1"/>-->



  <TextView
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:text="@string/map"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:textSize="20sp"
    />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">
    <TextView
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="0.05"
      android:text="@string/xy"
      android:gravity="center"/>

    <EditText
      android:id="@+id/xy"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.07"
      android:layout_marginEnd="10dp"
      />
    <TextView
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="0.04"
      android:text="@string/xy2"
      android:gravity="center"/>

    <EditText
      android:id="@+id/xy2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.07"
      android:layout_marginEnd="10dp" />
    <TextView
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.08"
    android:text="@string/lCategory"
    android:gravity="center"/>

    <EditText
      android:id="@+id/category"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.1"
      android:layout_marginEnd="10dp" />


  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp">
    <Button
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="0.333"
      android:text="@string/entrance"
      android:layout_marginStart="35dp"
      android:layout_marginEnd="5dp"
      android:background="@drawable/rounded_20dp"
      android:backgroundTint="@color/lightGrey"
      android:onClick="addEntrance"
      />
    <Button
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="0.333"
      android:text="@string/shelf"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:background="@drawable/rounded_20dp"
      android:backgroundTint="@color/lightGrey"
      android:onClick="addShelf"/>
    <Button
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="0.333"
      android:text="@string/exit"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="35dp"
      android:background="@drawable/rounded_20dp"
      android:backgroundTint="@color/lightGrey"
      android:onClick="addExit"/>


  </LinearLayout>
  <TableLayout
    android:id="@+id/matrix"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"/>

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/findPath"
    android:layout_gravity="center"
    android:background="@drawable/rounded_20dp"
    android:backgroundTint="@color/colorPrimary"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:onClick="findPath"
    />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
    <Button
      android:id="@+id/mapButtonNothing"
      android:layout_width="0dp"
      android:layout_weight="0.5"
      android:layout_height="match_parent"
      android:text="@string/map"
      android:background="@drawable/rounded_20dp"
      android:backgroundTint="@color/midGrey"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="5dp"
      android:layout_marginBottom="10dp"
      />
    <Button
      android:id="@+id/mapToShoppingListButton"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="0.5"
      android:text="@string/shopping_list"
      android:background="@drawable/rounded_20dp"
      android:backgroundTint="@color/lightGrey"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"
      />
  </LinearLayout>

</LinearLayout>