<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity"
  android:background="@color/white">

  <View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.3"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:text="@string/shopCircuit"
    android:gravity="center"
    android:textSize="40sp"
    android:layout_marginBottom="30dp"/>
  <ImageView
    android:id="@+id/gifView"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    />

  <View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.3"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
    <Button
      android:id="@+id/mapButton"
      android:layout_width="0dp"
      android:layout_weight="0.5"
      android:layout_height="match_parent"
      android:text="@string/map"
      android:background="@drawable/rounded_20dp"
      android:backgroundTint="@color/lightGrey"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="5dp"
      android:layout_marginBottom="10dp"
      />
    <Button
      android:id="@+id/shoppingListButton"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="0.5"
      android:text="@string/shopping_list"
      android:background="@drawable/rounded_20dp"
      android:backgroundTint="@color/lightGrey"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"/>
  </LinearLayout>

</LinearLayout>
